<resources>
    <string name="app_name">Here</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ask_for_leave">申请假条</string>
    <string name="edit_phone_number">请输入新的手机号</string>
    <string name="caution_change_phone">注意：180天仅可更换一次手机，请谨慎操作。&#x000A;新手机串号在拨号界面输入*#06#获得，双卡手机为SIM卡1的IMEI。</string>

    <string name="history_of_leave">请假历史</string>
    <string name="history_of_warning">警示历史</string>
    <string name="history_of_change">手机更换历史</string>

    <string name="change_history_title">更换绑定手机至</string>
    <string name="change_history_content1">同学你好！你于</string>
    <string name="change_history_content2">申请更换绑定手机并审核通过，你学号</string>
    <string name="change_history_content3">所绑定的IMEI序列号已由原本的</string>
    <string name="change_history_content4">更换为</string>
    <string name="change_history_content5">，请悉知</string>
    <string name="change_history_disagree1">同学你好！你于</string>
    <string name="change_history_disagree2">申请更换绑定手审核未通过。</string>

    <string name="buff_type_study_hard">学习积极分子</string>
    <string name="buff_type_irresolution">摇摆边缘流派</string>
    <string name="buff_type_skip_class">翘课高发人群</string>

    <string name="buff_identifier_small_explain">头衔基于本学期总体出勤率划分等级</string>
    <string name="buff_identifier_explain_title">头衔详细介绍</string>
    <string name="buff_identifier_explain_content">\ \ \ \ \ \ \ \ \ 头衔评分由用户的总体出勤率折算而来，头衔等级由不同档次的评分来划定。
        \n\n\ \ \ \ \ \ \ \ \ 学习积极分子：这类人上课认不认真，学习积不积极我不知道，但至少这人点名的时候都来上课了！
        \n\ \ \ \ \ \ \ \ \ 当评分大于等于95分时，可获得此头衔。此头衔可减少80%被抽点概率，增加请假批准概率。
        \n\n\ \ \ \ \ \ \ \ \ 摇摆边缘流派：这类人错综复杂，拿捏不定。一言不合就出现在课堂上认真听讲，一不留神就在寝室呼呼大睡！
        \n\ \ \ \ \ \ \ \ \ 当评分大于等于75分，小于95分时，可获得此头衔。此头衔将增加30%被抽点概率。
        \n\n\ \ \ \ \ \ \ \ \ 翘课高发人群：这类人翘课成瘾，尤其上午第一节课更是作案高发，需设为特别关注！
        \n\ \ \ \ \ \ \ \ \ 当评分小于75分时，可获得此头衔。此头衔将会获得任课教师和辅导员的特殊照顾，具体你懂的~</string>

    <string name="login_notice">《用户须知》</string>
    <string name="login_notice_content1">\ \ \ \ \ \ \ \ \ \ 本平台面向在校师生使用，旨在减少教职工在维护上课出勤率的工作量以及为学校建设良好的学习风气和氛围。\n
    \ \ \ \ \ \ \ \ \ \ 本平台账户无需密码，每一位用户的学号与手机序列号双向绑定，即一部手机和一个学号是一一对应的，
    无法交叉使用。\n\ \ \ \ \ \ \ \ \ \
    本平台无需注册，首次使用的用户将自动注册，学号将与注册时使用的手机自动绑定，所以注册时务必使用自己常用的手机以防后期使用过程中带来的不便。</string>
    <string name="login_notice_content2">\ \ \ \ \ \ \ \ \ \ 为了避免出现用户手误输错学号而不小心绑定了别人的学号，希望新用户首次使用时再三确认输入的学号是否有误！</string>
    <string name="login_notice_content3">\ \ \ \ \ \ \ \ \ \ 若用户在使用过程中出现更换手机或手机遗失的情况，
        可申请更换手机。如果是换了新手机的用户，可在旧手机上直接申请更换。如果是手机遗失的用户则需要向辅导员提交书面申请更换手机，辅导员确认无误后完成受理。</string>

    <string name="question">Q&amp;A</string>
    <string name="write_question">我也要提交Q&amp;A</string>
    <string name="read_question">我还要看看Q&amp;A</string>

    <string name="personal_info">个人信息</string>
    <string name="change_phone">更换手机</string>
    <string name="common_question">常见问题</string>
    <string name="logout">退出账号</string>
    <string name="check_update">检查更新</string>
    <string name="about_us">关于我们</string>
    <string name="feedback">意见反馈</string>

    <string name="clear">清空</string>
    <string name="deliver">提交</string>
    <string name="cancel">取消</string>

    <string name="user_must_read">用户必须阅读完守则才可使用本软件</string>
    <string name="reason_need_permission">\ \ \ \ \ \ \ \ \ \ 我们需要电话权限来判断你的账号是否是您本人在使用。\n
            \ \ \ \ \ \ \ \ \ \ 我们需要位置和相机权限来判断你是否在指定的教室上课。\n
            \ \ \ \ \ \ \ \ \ \ 当你遇到问题时，我们需要储存权限来读取你发生的问题的错误日志.\n
            \ \ \ \ \ \ \ \ \ \ 当然请你放心，我们完全不会读取你的个人隐私，我们的app完全开源，如果你有兴趣读一读我们的代码，我们不胜荣幸。\n
            \ \ \ \ \ \ \ \ \ \ 如果你不小心拒绝了权限，请前往你手机对应的权限管理界面手动授予权限或者重启app会自动跳转到权限授予界面。</string>

    <string name="check_in_process">输入特定的签到代码，进行定位，在教室的一定范围内则签到成功.\n
        如果你的手机不小心丢了，可以找老师进行手动签到.\n
        并且每学期你有且仅有一次机会更改手机绑定，所以请不要好心地帮同学签到导致自己不能签到了.</string>

    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>

    <string name="have_not_submit">暂未提交</string>

    <string name="create_subject_notice">抱歉！您当前无教学班正在上课，无法使用考勤。是否需要创建新的教学班？</string>
    <string name="create_subject">创建教学班</string>
    <string name="join_subject_notice">抱歉！您当前无教学班正在上课，无法使用考勤。是否需要加入新的教学班？</string>
    <string name="join_subject">加入教学班</string>
    <string name="title_activity_leave_request_t2">LeaveRequestActivityT2</string>

</resources>
